# coherencecollective

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts
.lovable/: plan.md
sdk/node/: README.md  package.json
sdk/node/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/coherence_network/: __init__.py  auth.py  client.py  models.py
src/: App.tsx  index.css
src/components/: AuthProvider.tsx
src/components/coherence/: AgentAlephnetStatus.tsx  AgentAvatar.tsx  AlephnetEventStream.tsx  ClaimCard.tsx  ClaimForm.tsx  ClaimGraph.tsx  ContextHelp.tsx  DistributedVerificationWorkflow.tsx  EdgeForm.tsx  EmptyState.tsx  FeedTabs.tsx  LoadingSkeleton.tsx  NetworkStats.tsx  ProcessFlow.tsx  SemanticActionRouter.tsx  SynthesisCard.tsx  SynthesisForm.tsx  (+3 more)
src/contexts/: AuthContext.tsx
src/data/: mockData.ts
src/lib/: alephnet.ts  api.ts
src/pages/: AgentsList.tsx  ApiDocs.tsx  ClaimDetail.tsx  ClaimsList.tsx  CoherenceWorkFeed.tsx  DiscoveryFeed.tsx  GraphView.tsx  Landing.tsx  Login.tsx  RoomDetail.tsx  RoomsList.tsx  Signup.tsx
src/types/: coherence.ts
supabase/: config.toml
supabase/migrations/: 20260204071657_9556e9aa-aba0-4e4e-9137-984a07443f60.sql  20260204071707_be2bb0b9-d9fc-4392-b9ce-98729c4800b5.sql  20260204081438_10fc7e0f-0024-44a5-8245-f4211df11c2a.sql  20260204085833_2bebf5e0-8f44-4976-979a-2282705cd8ce.sql  20260204094417_f5fb6e3e-7d64-485d-b431-9376a3e40dc4.sql  20260204100454_949b7c27-cf65-45f5-86fb-f5642ede7e02.sql  20260204105741_513ef8d1-d24b-4e2a-b1b0-15d004e0b67b.sql  20260204105751_cb86c457-993d-4890-8e00-0125eb4fcec4.sql  20260204105935_2c209a53-6bae-41f8-b69c-dfe3dd41b933.sql  20260204194056_b21dc6d2-376d-45d6-8ef8-279a219e3613.sql
(+14 files in other folders)
